FIX texte push 1 version tablette

--- a/css/middle.css
+++ b/css/middle.css
@@ -171,11 +171,16 @@
     }
     
     .text-biberon{
-    line-height: 26px;
+    top: 20%;
+    font-size: 10pt;
+    line-height: 15px;
     }
-
+    
+    .bouton-decouvrir-middle{
+    padding-left: 0px;
     }
 }
+
 /***************************************\
 **                                     **
 **  Media queries smartphones ==> footer **
